added the business logo for dark and light theme

--- a/html/about.html
+++ b/html/about.html
@@ -44,7 +44,11 @@
 
       <div class="header__container">
         <div class="wrapper wrapper--wide wrapper--header">
-          <img src="../assets/logos/company-logo4.webp" class="company-logo" width="170" height="45" fetchpriority="high" decoding="async" loading="eager" alt="Algarve Webcraft's logo. Landscape scenary of beach-side cliffs on the left, with the business name on the right (Algarve Webcraft) and its slogan below it (Small business website designs.)">
+
+          <div class="business-logo-container">
+            <img src="../assets/logos/business-logo-light.webp" class="business-logo logo-front" width="200" height="70" fetchpriority="high" decoding="async" loading="eager" alt="Algarve Webcraft's logo. Landscape scenary of beach-side cliffs on the left, with the business name on the right (Algarve Webcraft) and its slogan below it (Small business website creator.)">
+            <img src="../assets/logos/business-logo-dark.webp" class="business-logo logo-back" width="200" height="70" fetchpriority="high" decoding="async" loading="eager" alt="" aria-hidden="true">
+          </div>
 
           <div class="hamburger-btn-box">
             <button id="dark-mode-toggle">
@@ -128,7 +132,7 @@
               <p class="cmp-main-text">Hi, I'm Tayler Batista, the founder and owner of Algarve Webcraft. Originally from South Africa, I have spent much of my adult life between there and Portugal but for the past five years, I’ve been proud to call the beautiful town of Lagos my home. A couple of years ago, I decided to finally pursue my long-standing interest in programming. I began by studying software development but soon discovered a real passion for website development. What started as just an easier way to break into tech, became something more and so I decided to fully pursue it.</p>
               <p class="cmp-main-text cmp-main-text--pg2-s1">It was during this time that I realized how difficult it is for new or small businesses (especially in a small town) to invest thousands of euros upfront for a website. As a result, many business owners are left with only two options - go without a website entirely, or build one themselves using platforms like WordPress or Wix. While these page-builders are more affordable, they lead to generic, poorly performing websites that still require a lot of time and effort to manage as well as having to create it yourself.</p>
               <p class="cmp-main-text cmp-main-text--pg2-s1">So I began thinking about a business designed specifically to help small businesses that can not afford the high upfront costs of a website. Instead of a large one-time fee, owners can pay a small monthly fee while having everything taken care of, from the initial design, to all the updates and maintenance. This means business owners can focus 100% on what they do best while still having a high-quality, fully managed website that helps them grow and attract more customers. With this, Algarve Webcraft came to life!</p>
-              
+
               <a class="cmp-main-btn cmp-main-btn--light cmp-main-btn--pg2-s1" href="./contact.html">Contact Us</a>
             </div>
             <div class="who-image-block">
@@ -217,17 +221,17 @@
         <div class="wrapper wrapper--mobile-S">
 
           <div class="footer-flex-container">
-            <div class="footer__image-text-block">
-              <img src="../assets/logos/company-logo4.webp" alt="Business Logo" decoding="async" loading="lazy" height="120" width="310" aria-hidden="true">
+            <div class="footer__image-text-block"> 
+              <img src="../assets/logos/business-logo-light.webp" class="footer-business-logo" width="310" height="110" alt="" decoding="async" loading="lazy" aria-hidden="true">
               <p>Our philosophy is that every small business deserves a website they can be proud of. No matter your size, your online presence should be built to grow with you. We are here to help make it happen!</p>
-              <a class="cmp-main-btn-footer" href="./contact.html">Get Started Now</a>
+              <a class="cmp-main-btn-footer" href="./html/contact.html">Get Started Now</a>
             </div>
 
             <div class="footer__quick-links-block">
               <h3>Links</h3>
               <ul>
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="./about.html">Who We Are</a></li> 
+                <li><a href="./about.html">Who We Are</a></li>
                 <li><a href="./services.html">What We Offer</a></li>
                 <li><a href="./pricing.html">Our Prices</a></li>
               </ul>
