--- a/html/about.html
+++ b/html/about.html
@@ -167,12 +167,28 @@
           <div class="banner">
             <div class="banner-overlay"></div>
             <div class="slider" style="--quantity: 3">
-              <div class="item" style="--position: 1"><a href="#"><img src="../assets/logos/company-logo4.webp" alt="Website 1" decoding="async" loading="lazy"></a></div>
-              <div class="item" style="--position: 2"><a href="#"><img src="../assets/logos/company-logo4.webp" alt="Website 2" decoding="async" loading="lazy"></a></div>
-              <div class="item" style="--position: 3"><a href="#"><img src="../assets/logos/company-logo4.webp" alt="Website 3" decoding="async" loading="lazy"></a></div>
+              <div class="item" style="--position: 1"><a href="https://tis-ta.github.io/Mushroom-Guide/">
+                <picture>
+                  <source srcset="../assets/images/mushroom-foraging-l.webp" media="(min-width: 768px)" type="image/webp">
+                  <source srcset="../assets/images/mushroom-foraging-s.webp" media="(max-width: 767px)" type="image/webp">
+                  <img src="../assets/images/mushroom-foraging.jpg" class="portfolio-images" width="500px" height="300px" alt="A screenshot of a website called 'Mushroom Foraging', created by Algarve Webcraft" decoding="async" loading="lazy"></a></div>
+                </picture>
+              <div class="item" style="--position: 2"><a href="https://tis-ta.github.io/Freelance-Portfolio/">
+                <picture>
+                  <source srcset="../assets/images/designer-portfolio-l.webp" media="(min-width: 768px)" type="image/webp">
+                  <source srcset="../assets/images/designer-portfolio-s.webp" media="(max-width: 767px)" type="image/webp">
+                  <img src="../assets/images/designer-portfolio.jpg" class="portfolio-images" width="500px" height="300px" alt="A screenshot of a website called 'Designer Profile', created by Algarve Webcraft" decoding="async" loading="lazy"></a></div>
+                </picture>
+              <div class="item" style="--position: 3"><a href="https://tis-ta.github.io/Mushroom-Guide/">
+                <picture>
+                  <source srcset="../assets/images/mushroom-foraging-l.webp" media="(min-width: 768px)" type="image/webp">
+                  <source srcset="../assets/images/mushroom-foraging-s.webp" media="(max-width: 767px)" type="image/webp">
+                  <img src="../assets/images/mushroom-foraging.jpg" class="portfolio-images" width="500px" height="300px" alt="A screenshot of a website called 'Mushroom Foraging', created by Algarve Webcraft" decoding="async" loading="lazy"></a></div>
+                </picture>
             </div>
           </div>
 
+          <p class="cmp-topper-heading cmp-topper-heading--pg1-s4">Click on an image to view the website</p>
         </div>
       </section>
 
@@ -182,7 +198,7 @@
 
       <section class="pg1-s6-testimonials pg1-s6-testimonials--pg2-s3" aria-labelledby="s3-testimonials">
         <div class="wrapper">
-          <span class="cmp-topper-heading cmp-topper-heading--pg2-s3">Our Testimonials</span>
+          <span class="cmp-topper-heading cmp-topper-heading--pg2-s2">Our Testimonials</span> 
           <h2 class="cmp-sub-heading cmp-sub-heading--pg1-s6" id="s3-testimonials">Serving Small Businesses Across the Continent</h2>
           <p class="cmp-main-text cmp-main-text--pg1-s6">We are passionate about helping small business owners bring their vision to life online. When you work with Algarve WebCraft, you are not hiring an agency, you are gaining a dedicated partner who cares about your success. Here is what a few of our clients have shared about working with us.</p>
 
