--- a/index.html
+++ b/index.html
@@ -447,12 +447,28 @@
           <div class="banner">
             <div class="banner-overlay"></div>
             <div class="slider" style="--quantity: 3">
-              <div class="item" style="--position: 1"><a href="#"><img src="assets/logos/company-logo4.webp" alt="Website 1" decoding="async" loading="lazy"></a></div>
-              <div class="item" style="--position: 2"><a href="#"><img src="assets/logos/company-logo4.webp" alt="Website 2" decoding="async" loading="lazy"></a></div>
-              <div class="item" style="--position: 3"><a href="#"><img src="assets/logos/company-logo4.webp" alt="Website 3" decoding="async" loading="lazy"></a></div>
+              <div class="item" style="--position: 1"><a href="https://tis-ta.github.io/Mushroom-Guide/">
+                <picture>
+                  <source srcset="assets/images/mushroom-foraging-l.webp" media="(min-width: 768px)" type="image/webp">
+                  <source srcset="assets/images/mushroom-foraging-s.webp" media="(max-width: 767px)" type="image/webp">
+                  <img src="assets/images/mushroom-foraging.jpg" class="portfolio-images" width="500px" height="300px" alt="A screenshot of a website called 'Mushroom Foraging', created by Algarve Webcraft" decoding="async" loading="lazy"></a></div>
+                </picture>
+              <div class="item" style="--position: 2"><a href="https://tis-ta.github.io/Freelance-Portfolio/">
+                <picture>
+                  <source srcset="assets/images/designer-portfolio-l.webp" media="(min-width: 768px)" type="image/webp">
+                  <source srcset="assets/images/designer-portfolio-s.webp" media="(max-width: 767px)" type="image/webp">
+                  <img src="assets/images/designer-portfolio.jpg" class="portfolio-images" width="500px" height="300px" alt="A screenshot of a website called 'Designer Profile', created by Algarve Webcraft" decoding="async" loading="lazy"></a></div>
+                </picture>
+              <div class="item" style="--position: 3"><a href="https://tis-ta.github.io/Mushroom-Guide/">
+                <picture>
+                  <source srcset="assets/images/mushroom-foraging-l.webp" media="(min-width: 768px)" type="image/webp">
+                  <source srcset="assets/images/mushroom-foraging-s.webp" media="(max-width: 767px)" type="image/webp">
+                  <img src="assets/images/mushroom-foraging.jpg" class="portfolio-images" width="500px" height="300px" alt="A screenshot of a website called 'Mushroom Foraging', created by Algarve Webcraft" decoding="async" loading="lazy"></a></div>
+                </picture>
             </div>
           </div>
 
+          <p class="cmp-topper-heading cmp-topper-heading--pg1-s4">Click on an image to view the website</p>
         </div>
       </section>
 
