final touches and fixes

--- a/html/terms.html
+++ b/html/terms.html
@@ -245,7 +245,7 @@
             <div class="footer__image-text-block">
               <img src="../assets/logos/business-logo-light.webp" class="footer-business-logo" width="310" height="110" alt="" decoding="async" loading="lazy" aria-hidden="true">
               <p>Our philosophy is that every small business deserves a website they can be proud of. No matter your size, your online presence should be built to grow with you. We are here to help make it happen!</p>
-              <a class="cmp-main-btn-footer" href="./html/contact.html">Get Started Now</a>
+              <a class="cmp-main-btn-footer" href="./contact.html">Get Started Now</a>
             </div>
 
             <div class="footer__quick-links-block">
