--- a/html/about.html
+++ b/html/about.html
@@ -229,6 +229,10 @@
         </div>
       </section>
 
+      <!------------------------------------------------------------------------------------------------------------>
+      <!------------------------------------------------ FOOTER ---------------------------------------------------->
+      <!------------------------------------------------------------------------------------------------------------>
+
       <footer id="footer">
         <svg class="footer__svg-page-decoration" viewBox="0 0 1440 150" aria-hidden="true">
           <path d="M0,0 C300,100 600,0 900,100 C1200,200 1440,0 1440,0 L1440,150 L0,150 Z" />
