some changes such as dark-mode transitions

--- a/html/about.html
+++ b/html/about.html
@@ -19,7 +19,8 @@
     <link rel="preload" as="font" type="font/woff2" crossorigin href="../assets/fonts/oswald-v53-latin-500.woff2">
     <link rel="preload" as="font" type="font/woff2" crossorigin href="../assets/fonts/oswald-v53-latin-600.woff2">
     <link rel="preload" as="font" type="font/woff2" crossorigin href="../assets/fonts/oswald-v53-latin-700.woff2">
-    <link rel="preload" as="image" type="image/webp" href="../assets/logos/company-logo4.webp">
+    <link rel="preload" as="image" type="image/webp" href="../assets/logos/business-logo-light.webp">
+    <link rel="preload" as="image" type="image/webp" href="../assets/logos/business-logo-dark.webp">
     <link rel="preload" href="../css/critical.css" as="style">
     <link rel="stylesheet" href="../css/critical.css">
     <link rel="preload" href="../css/style.css" as="style">
@@ -31,6 +32,7 @@
     <link rel="preload" href="../css/dark-mode.css" as="style">
     <link rel="stylesheet" href="../css/dark-mode.css">
     <script type="module" src="../js/glide.min.js" defer></script>
+    <script src="../js/swup.umd.js" defer></script>
     <script type="module" src="../js/script.js" defer></script>
     <noscript>
       <link rel="stylesheet" href="../css/style.css">
@@ -172,19 +174,19 @@
                   <source srcset="../assets/images/mushroom-foraging-l.webp" media="(min-width: 768px)" type="image/webp">
                   <source srcset="../assets/images/mushroom-foraging-s.webp" media="(max-width: 767px)" type="image/webp">
                   <img src="../assets/images/mushroom-foraging.jpg" class="portfolio-images" width="500px" height="300px" alt="A screenshot of a website called 'Mushroom Foraging', created by Algarve Webcraft" decoding="async" loading="lazy"></a></div>
-                </picture>
+              </picture>
               <div class="item" style="--position: 2"><a href="https://tis-ta.github.io/Freelance-Portfolio/">
                 <picture>
                   <source srcset="../assets/images/designer-portfolio-l.webp" media="(min-width: 768px)" type="image/webp">
                   <source srcset="../assets/images/designer-portfolio-s.webp" media="(max-width: 767px)" type="image/webp">
                   <img src="../assets/images/designer-portfolio.jpg" class="portfolio-images" width="500px" height="300px" alt="A screenshot of a website called 'Designer Profile', created by Algarve Webcraft" decoding="async" loading="lazy"></a></div>
-                </picture>
+              </picture>
               <div class="item" style="--position: 3"><a href="https://tis-ta.github.io/Mushroom-Guide/">
                 <picture>
                   <source srcset="../assets/images/mushroom-foraging-l.webp" media="(min-width: 768px)" type="image/webp">
                   <source srcset="../assets/images/mushroom-foraging-s.webp" media="(max-width: 767px)" type="image/webp">
                   <img src="../assets/images/mushroom-foraging.jpg" class="portfolio-images" width="500px" height="300px" alt="A screenshot of a website called 'Mushroom Foraging', created by Algarve Webcraft" decoding="async" loading="lazy"></a></div>
-                </picture>
+              </picture>
             </div>
           </div>
 
@@ -198,7 +200,7 @@
 
       <section class="pg1-s6-testimonials pg1-s6-testimonials--pg2-s3" aria-labelledby="s3-testimonials">
         <div class="wrapper">
-          <span class="cmp-topper-heading cmp-topper-heading--pg2-s2">Our Testimonials</span> 
+          <span class="cmp-topper-heading cmp-topper-heading--pg2-s2">Our Testimonials</span>
           <h2 class="cmp-sub-heading cmp-sub-heading--pg1-s6" id="s3-testimonials">Serving Small Businesses Across the Continent</h2>
           <p class="cmp-main-text cmp-main-text--pg1-s6">We are passionate about helping small business owners bring their vision to life online. When you work with Algarve WebCraft, you are not hiring an agency, you are gaining a dedicated partner who cares about your success. Here is what a few of our clients have shared about working with us.</p>
 
@@ -241,7 +243,7 @@
         <div class="wrapper wrapper--mobile-S">
 
           <div class="footer-flex-container">
-            <div class="footer__image-text-block"> 
+            <div class="footer__image-text-block">
               <img src="../assets/logos/business-logo-light.webp" class="footer-business-logo" width="310" height="110" alt="" decoding="async" loading="lazy" aria-hidden="true">
               <p>Our philosophy is that every small business deserves a website they can be proud of. No matter your size, your online presence should be built to grow with you. We are here to help make it happen!</p>
               <a class="cmp-main-btn-footer" href="./contact.html">Get Started Now</a>
