--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <link rel="preload" as="font" type="font/woff2" crossorigin href="assets/fonts/oswald-v53-latin-500.woff2">
     <link rel="preload" as="font" type="font/woff2" crossorigin href="assets/fonts/oswald-v53-latin-600.woff2">
     <link rel="preload" as="font" type="font/woff2" crossorigin href="assets/fonts/oswald-v53-latin-700.woff2">
-    <link rel="preload" as="image" type="image/webp" href="assets/logos/company-logo4.webp">
+    <link rel="preload" as="image" type="image/webp" href="assets/logos/business-logo-light.webp">
+    <link rel="preload" as="image" type="image/webp" href="assets/logos/business-logo-dark.webp">
     <link rel="preload" href="css/critical.css" as="style">
     <link rel="stylesheet" href="css/critical.css">
     <link rel="preload" href="css/style.css" as="style">
@@ -29,6 +30,7 @@
     <link rel="preload" href="css/dark-mode.css" as="style">
     <link rel="stylesheet" href="css/dark-mode.css">
     <script type="module" src="js/glide.min.js" defer></script>
+    <script src="js/swup.umd.js" defer></script>
     <script type="module" src="js/script.js" defer></script>
     <noscript>
       <link rel="stylesheet" href="css/style.css">
