--- a/html/contact.html
+++ b/html/contact.html
@@ -19,7 +19,8 @@
     <link rel="preload" as="font" type="font/woff2" crossorigin href="../assets/fonts/oswald-v53-latin-500.woff2">
     <link rel="preload" as="font" type="font/woff2" crossorigin href="../assets/fonts/oswald-v53-latin-600.woff2">
     <link rel="preload" as="font" type="font/woff2" crossorigin href="../assets/fonts/oswald-v53-latin-700.woff2">
-    <link rel="preload" as="image" type="image/webp" href="../assets/logos/company-logo4.webp">
+    <link rel="preload" as="image" type="image/webp" href="../assets/logos/business-logo-light.webp">
+    <link rel="preload" as="image" type="image/webp" href="../assets/logos/business-logo-dark.webp">
     <link rel="preload" href="../css/critical.css" as="style">
     <link rel="stylesheet" href="../css/critical.css">
     <link rel="preload" href="../css/style.css" as="style">
@@ -28,6 +29,7 @@
     <link rel="stylesheet" href="../css/style-pages.css">
     <link rel="preload" href="../css/dark-mode.css" as="style">
     <link rel="stylesheet" href="../css/dark-mode.css">
+    <script src="../js/swup.umd.js" defer></script>
     <script type="module" src="../js/script.js" defer></script>
     <noscript>
       <link rel="stylesheet" href="../css/style.css">
