--- a/html/services.html
+++ b/html/services.html
@@ -15,24 +15,25 @@
         }
       })();
     </script>
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="../assets/fonts/oswald-v53-latin-regular.woff2">
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="../assets/fonts/oswald-v53-latin-500.woff2">
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="../assets/fonts/oswald-v53-latin-600.woff2">
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="../assets/fonts/oswald-v53-latin-700.woff2">
-    <link rel="preload" as="image" type="image/webp" href="../assets/logos/business-logo-light.webp">
-    <link rel="preload" as="image" type="image/webp" href="../assets/logos/business-logo-dark.webp">
-    <link rel="preload" href="../css/critical.css" as="style">
-    <link rel="stylesheet" href="../css/critical.css">
-    <link rel="preload" href="../css/style.css" as="style">
-    <link rel="stylesheet" href="../css/style.css" media="print" onload="this.media='all'">
-    <link rel="preload" href="../css/style-pages.css" as="style">
-    <link rel="stylesheet" href="../css/style-pages.css">
-    <link rel="preload" href="../css/dark-mode.css" as="style">
-    <link rel="stylesheet" href="../css/dark-mode.css">
-    <script src="../js/swup.umd.js" defer></script>
-    <script type="module" src="../js/script.js" defer></script>
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="/assets/fonts/oswald-v53-latin-regular.woff2">
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="/assets/fonts/oswald-v53-latin-500.woff2">
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="/assets/fonts/oswald-v53-latin-600.woff2">
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="/assets/fonts/oswald-v53-latin-700.woff2">
+    <link rel="preload" as="image" type="image/webp" href="/assets/logos/business-logo-light.webp">
+    <link rel="preload" as="image" type="image/webp" href="/assets/logos/business-logo-dark.webp">
+    <link rel="preload" href="/css/critical.css" as="style">
+    <link rel="stylesheet" href="/css/critical.css">
+    <link rel="preload" href="/css/style.css" as="style">
+    <link rel="stylesheet" href="/css/style.css" media="print" onload="this.media='all'">
+    <link rel="preload" href="/css/style-pages.css" as="style">
+    <link rel="stylesheet" href="/css/style-pages.css">
+    <link rel="preload" href="/css/dark-mode.css" as="style">
+    <link rel="stylesheet" href="/css/dark-mode.css">
+    <script type="module" src="/js/glide.min.js" defer></script>
+    <script src="/js/swup.js" defer></script>
+    <script type="module" src="/js/script.js" defer></script>
     <noscript>
-      <link rel="stylesheet" href="../css/style.css">
+      <link rel="stylesheet" href="/css/style.css">
     </noscript>
     <title>Algarve WebCraft | Small Business Website Specialist</title>
   </head>
@@ -44,9 +45,19 @@
         <div class="wrapper wrapper--wide wrapper--header">
 
           <div class="business-logo-container">
-            <img src="../assets/logos/business-logo-light.webp" class="business-logo logo-front" width="200" height="70" fetchpriority="high" decoding="async" loading="eager" alt="Algarve Webcraft's logo. Landscape scenary of beach-side cliffs on the left, with the business name on the right (Algarve Webcraft) and its slogan below it (Small business website creator.)">
-            <img src="../assets/logos/business-logo-dark.webp" class="business-logo logo-back" width="200" height="70" fetchpriority="high" decoding="async" loading="eager" alt="" aria-hidden="true">
+            <img src="/assets/logos/business-logo-light.webp" class="business-logo logo-front" width="200" height="70" fetchpriority="high" decoding="async" loading="eager" alt="Algarve Webcraft's logo. Landscape scenary of beach-side cliffs on the left, with the business name on the right (Algarve Webcraft) and its slogan below it (Small business website creator.)">
+            <img src="/assets/logos/business-logo-dark.webp" class="business-logo logo-back" width="200" height="70" fetchpriority="high" decoding="async" loading="eager" alt="" aria-hidden="true">
           </div>
+
+          <nav class="nav-bar">
+            <ul>
+              <li><a href="/index.html">Home</a></li>
+              <li><a href="/html/about.html">About Us</a></li>
+              <li><a href="/html/services.html">Services</a></li>
+              <li><a href="/html/pricing.html">Pricing</a></li>
+              <li><a href="/html/contact.html">Contact</a></li>
+            </ul>
+          </nav>
 
           <div class="hamburger-btn-box">
             <button id="dark-mode-toggle">
@@ -93,34 +104,24 @@
             </button>
           </div>
 
-          <nav class="nav-bar">
-            <ul>
-              <li><a href="../index.html">Home</a></li>
-              <li><a href="about.html">About Us</a></li>
-              <li><a href="services.html">Services</a></li>
-              <li><a href="pricing.html">Pricing</a></li>
-              <li><a href="contact.html">Contact</a></li>
-            </ul>
-          </nav>
-
         </div>
       </div>
     </header>
 
-    <main id="main">
+    <main id="swup">
 
       <!------------------------------------------------------------------------------------------------------------>
       <!--------------------------------------- PAGE 3 / SECTION-ONE / SERVICES ------------------------------------>
       <!------------------------------------------------------------------------------------------------------------>
 
       <div class="cmp-svg-pages-decoration">
-        <h1 class="cmp-main-heading cmp-main-heading--other-pages">Our Services</h1>
+        <h1 class="cmp-main-heading cmp-main-heading--other-pages transition-slide">Our Services</h1>
         <svg viewBox="0 0 1440 160" class="cmp-svg-pages-decoration__svg">
           <path d="M0,80 C360,160 1080,0 1440,80 L1440,0 L0,0 Z" />
         </svg>
       </div>
 
-      <section class="pg3-s1-services" aria-labelledby="s1-services">
+      <section class="pg3-s1-services transition-reverse-slide" aria-labelledby="s1-services">
         <div class="wrapper wrapper--mobile-L">
 
           <div class="services-box-flex">
@@ -160,7 +161,7 @@
               <p class="cmp-main-text">And because we handle everything from design and development to ongoing upkeep and maintenance, you can focus on what matters the most: running your business.</p>
             </div>
 
-            <div class="services-box__svg" aria-hidden="true">
+            <div class="services-box__rocket-svg" aria-hidden="true">
               <svg viewBox="0 0 64 64" aria-hidden="true">
                 <g fill="#ff9d27">
                   <path d="M10.9 48.7c4-4 4.4-5 6.9-2.5s1.5 2.8-2.5 6.9c-3 3-6.8 2.4-6.8 2.4s-.6-3.8 2.4-6.8"></path>
@@ -206,7 +207,7 @@
       <!--------------------------------------- PAGE 3 / SECTION-TWO / MISSION ------------------------------------->
       <!------------------------------------------------------------------------------------------------------------>
 
-      <section class="pg1-s2-mission pg1-s2-mission--pg3-s2" aria-labelledby="s2-mission">
+      <section class="pg1-s2-mission pg1-s2-mission--pg3-s2 transition-reverse-slide" aria-labelledby="s2-mission">
         <div class="wrapper wrapper--mobile-S">
 
           <svg class="decorative-side-svg" viewBox="0 0 512 512" aria-hidden="true">
@@ -326,7 +327,7 @@
       <!--------------------------------------- PAGE 3 / SECTION-THREE / APPROACH ---------------------------------->
       <!------------------------------------------------------------------------------------------------------------>
 
-      <section class="pg1-s1-approach pg1-s1-approach--pg3-s3" aria-labelledby="s3-approach">
+      <section class="pg1-s1-approach pg1-s1-approach--pg3-s3 transition-reverse-slide" aria-labelledby="s3-approach">
         <div class="wrapper wrapper--mobile-L">
 
           <svg class="ufo-decorative-svg dark-mode-show" viewBox="0 0 511.996 511.996" aria-hidden="true">
