--- a/html/about.html
+++ b/html/about.html
@@ -33,23 +33,23 @@
     <link rel="preload" as="font" type="font/woff2" crossorigin href="/Algarve-WebCraft/assets/fonts/oswald-v53-latin-700.woff2">
     <link rel="preload" as="image" type="image/webp" href="/Algarve-WebCraft/assets/logos/business-logo-light.webp">
     <link rel="preload" as="image" type="image/webp" href="/Algarve-WebCraft/assets/logos/business-logo-dark.webp">
-    <link rel="preload" href="/Algarve-Webcraft/css/critical.css" as="style">
-    <link rel="stylesheet" href="/Algarve-Webcraft/css/critical.css">
-    <link rel="preload" href="/Algarve-Webcraft/css/style.css" as="style">
-    <link rel="stylesheet" href="/Algarve-Webcraft/css/style.css" media="print" onload="this.media='all'">
-    <link rel="preload" href="/Algarve-Webcraft/css/glide.css" as="style">
-    <link rel="stylesheet" href="/Algarve-Webcraft/css/glide.css" media="print" onload="this.media='all'">
-    <link rel="preload" href="/Algarve-Webcraft/css/style-pages.css" as="style">
-    <link rel="stylesheet" href="/Algarve-Webcraft/css/style-pages.css">
-    <link rel="preload" href="/Algarve-Webcraft/css/dark-mode.css" as="style">
-    <link rel="stylesheet" href="/Algarve-Webcraft/css/dark-mode.css">
-    <script type="module" src="/Algarve-Webcraft/js/glide.min.js" defer></script>
-    <script src="/Algarve-Webcraft/js/swup.js" defer></script>
-    <script src="/Algarve-Webcraft/js/gsap.min.js"></script>
-    <script type="module" src="/Algarve-Webcraft/js/script.js" defer></script>
+    <link rel="preload" href="css/critical.css" as="style">
+    <link rel="stylesheet" href="css/critical.css">
+    <link rel="preload" href="css/style.css" as="style">
+    <link rel="stylesheet" href="css/style.css" media="print" onload="this.media='all'">
+    <link rel="preload" href="css/glide.css" as="style">
+    <link rel="stylesheet" href="css/glide.css" media="print" onload="this.media='all'">
+    <link rel="preload" href="css/style-pages.css" as="style">
+    <link rel="stylesheet" href="css/style-pages.css">
+    <link rel="preload" href="css/dark-mode.css" as="style">
+    <link rel="stylesheet" href="css/dark-mode.css">
+    <script type="module" src="js/glide.min.js" defer></script>
+    <script src="js/swup.js" defer></script>
+    <script src="js/gsap.min.js"></script>
+    <script type="module" src="js/script.js" defer></script>
     <noscript>
-      <link rel="stylesheet" href="/Algarve-Webcraft/css/style.css">
-      <link rel="stylesheet" href="/Algarve-Webcraft/css/glide.css">
+      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="css/glide.css">
     </noscript>
     <title>Algarve WebCraft | Small Business Website Specialist</title>
   </head>
