--- a/html/about.html
+++ b/html/about.html
@@ -26,13 +26,13 @@
       });
     </script>
     <base href="/Algarve-WebCraft/">
-    <link rel="icon" href="/Algarve-WebCraft/assets/logos/favicon-logo.ico" type="image/x-icon">
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="/Algarve-WebCraft/assets/fonts/oswald-v53-latin-regular.woff2">
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="/Algarve-WebCraft/assets/fonts/oswald-v53-latin-500.woff2">
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="/Algarve-WebCraft/assets/fonts/oswald-v53-latin-600.woff2">
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="/Algarve-WebCraft/assets/fonts/oswald-v53-latin-700.woff2">
-    <link rel="preload" as="image" type="image/webp" href="/Algarve-WebCraft/assets/logos/business-logo-light.webp">
-    <link rel="preload" as="image" type="image/webp" href="/Algarve-WebCraft/assets/logos/business-logo-dark.webp">
+    <link rel="icon" href="assets/logos/favicon-logo.ico" type="image/x-icon">
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="assets/fonts/oswald-v53-latin-regular.woff2">
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="assets/fonts/oswald-v53-latin-500.woff2">
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="assets/fonts/oswald-v53-latin-600.woff2">
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="assets/fonts/oswald-v53-latin-700.woff2">
+    <link rel="preload" as="image" type="image/webp" href="assets/logos/business-logo-light.webp">
+    <link rel="preload" as="image" type="image/webp" href="assets/logos/business-logo-dark.webp">
     <link rel="preload" href="css/critical.css" as="style">
     <link rel="stylesheet" href="css/critical.css">
     <link rel="preload" href="css/style.css" as="style">
@@ -61,8 +61,8 @@
         <div class="wrapper wrapper--wide wrapper--header">
 
           <div class="business-logo-container">
-            <img src="/Algarve-WebCraft/assets/logos/business-logo-light.webp" class="business-logo logo-front" width="200" height="70" fetchpriority="high" decoding="async" loading="eager" alt="Algarve Webcraft's logo. Landscape scenary of beach-side cliffs on the left, with the business name on the right (Algarve Webcraft) and its slogan below it (Small business website creator.)">
-            <img src="/Algarve-WebCraft/assets/logos/business-logo-dark.webp" class="business-logo logo-back" width="200" height="70" fetchpriority="high" decoding="async" loading="eager" alt="" aria-hidden="true">
+            <img src="assets/logos/business-logo-light.webp" class="business-logo logo-front" width="200" height="70" fetchpriority="high" decoding="async" loading="eager" alt="Algarve Webcraft's logo. Landscape scenary of beach-side cliffs on the left, with the business name on the right (Algarve Webcraft) and its slogan below it (Small business website creator.)">
+            <img src="assets/logos/business-logo-dark.webp" class="business-logo logo-back" width="200" height="70" fetchpriority="high" decoding="async" loading="eager" alt="" aria-hidden="true">
           </div>
 
           <nav class="nav-bar">
@@ -152,15 +152,15 @@
             </div>
             <div class="who-image-block">
               <picture>
-                <source srcset="/Algarve-WebCraft/assets/images/lagos-cliffs-l.webp" media="(min-width: 768px)" type="image/webp">
-                <source srcset="/Algarve-WebCraft/assets/images/lagos-cliffs-s.webp" media="(max-width: 767px)" type="image/webp">
-                <img src="/Algarve-WebCraft/assets/images/lagos-cliffs.jpg" class="who-image-block__first-image" alt="Cliffs on the Algarve coast." width="506px" height="674px" loading="lazy" decoding="async">
+                <source srcset="assets/images/lagos-cliffs-l.webp" media="(min-width: 768px)" type="image/webp">
+                <source srcset="assets/images/lagos-cliffs-s.webp" media="(max-width: 767px)" type="image/webp">
+                <img src="assets/images/lagos-cliffs.jpg" class="who-image-block__first-image" alt="Cliffs on the Algarve coast." width="506px" height="674px" loading="lazy" decoding="async">
               </picture>
 
               <picture class="who-image-block__second-image-container">
-                <source srcset="/Algarve-WebCraft/assets/images/man-l.webp" media="(min-width: 768px)" type="image/webp">
-                <source srcset="/Algarve-WebCraft/assets/images/man-s.webp" media="(max-width: 767px)" type="image/webp">
-                <img src="/Algarve-WebCraft/assets/images/man.jpg" class="who-image-block__second-image" alt="A picture of Tayler Batista, the owner and lead developer of Algarve WebCraft.." width="268px" height="404px" loading="lazy" decoding="async">
+                <source srcset="assets/images/man-l.webp" media="(min-width: 768px)" type="image/webp">
+                <source srcset="assets/images/man-s.webp" media="(max-width: 767px)" type="image/webp">
+                <img src="assets/images/man.jpg" class="who-image-block__second-image" alt="A picture of Tayler Batista, the owner and lead developer of Algarve WebCraft.." width="268px" height="404px" loading="lazy" decoding="async">
               </picture>
             </div>
           </div>
@@ -183,21 +183,21 @@
             <div class="slider" style="--quantity: 3">
               <div class="item" style="--position: 1"><a href="https://Algarve-WebCraft.github.io/The-Garden-Bar-and-Grill/index.html">
                 <picture>
-                  <source srcset="/Algarve-WebCraft/assets/images/the-garden-l.webp" media="(min-width: 768px)" type="image/webp">
-                  <source srcset="/Algarve-WebCraft/assets/images/the-garden-s.webp" media="(max-width: 767px)" type="image/webp">
-                  <img src="/Algarve-WebCraft/assets/images/the-garden.jpg" class="portfolio-images" width="500px" height="300px" alt="A screenshot of a website called 'Mushroom Foraging', created by Algarve Webcraft" decoding="async" loading="lazy"></a></div>
+                  <source srcset="assets/images/the-garden-l.webp" media="(min-width: 768px)" type="image/webp">
+                  <source srcset="assets/images/the-garden-s.webp" media="(max-width: 767px)" type="image/webp">
+                  <img src="assets/images/the-garden.jpg" class="portfolio-images" width="500px" height="300px" alt="A screenshot of a website called 'Mushroom Foraging', created by Algarve Webcraft" decoding="async" loading="lazy"></a></div>
               </picture>
               <div class="item" style="--position: 2"><a href="https://Algarve-WebCraft.github.io/Freelance-Portfolio/">
                 <picture>
-                  <source srcset="/Algarve-WebCraft/assets/images/designer-portfolio-l.webp" media="(min-width: 768px)" type="image/webp">
-                  <source srcset="/Algarve-WebCraft/assets/images/designer-portfolio-s.webp" media="(max-width: 767px)" type="image/webp">
-                  <img src="/Algarve-WebCraft/assets/images/designer-portfolio.jpg" class="portfolio-images" width="500px" height="300px" alt="A screenshot of a website called 'Designer Profile', created by Algarve Webcraft" decoding="async" loading="lazy"></a></div>
+                  <source srcset="assets/images/designer-portfolio-l.webp" media="(min-width: 768px)" type="image/webp">
+                  <source srcset="assets/images/designer-portfolio-s.webp" media="(max-width: 767px)" type="image/webp">
+                  <img src="assets/images/designer-portfolio.jpg" class="portfolio-images" width="500px" height="300px" alt="A screenshot of a website called 'Designer Profile', created by Algarve Webcraft" decoding="async" loading="lazy"></a></div>
               </picture>
               <div class="item" style="--position: 3"><a href="https://Algarve-WebCraft.github.io/Mushroom-Guide/">
                 <picture>
-                  <source srcset="/Algarve-WebCraft/assets/images/mushroom-foraging-l.webp" media="(min-width: 768px)" type="image/webp">
-                  <source srcset="/Algarve-WebCraft/assets/images/mushroom-foraging-s.webp" media="(max-width: 767px)" type="image/webp">
-                  <img src="/Algarve-WebCraft/assets/images/mushroom-foraging.jpg" class="portfolio-images" width="500px" height="300px" alt="A screenshot of a website called 'Mushroom Foraging', created by Algarve Webcraft" decoding="async" loading="lazy"></a></div>
+                  <source srcset="assets/images/mushroom-foraging-l.webp" media="(min-width: 768px)" type="image/webp">
+                  <source srcset="assets/images/mushroom-foraging-s.webp" media="(max-width: 767px)" type="image/webp">
+                  <img src="assets/images/mushroom-foraging.jpg" class="portfolio-images" width="500px" height="300px" alt="A screenshot of a website called 'Mushroom Foraging', created by Algarve Webcraft" decoding="async" loading="lazy"></a></div>
               </picture>
             </div>
           </div>
@@ -256,7 +256,7 @@
 
           <div class="footer-flex-container">
             <div class="footer__image-text-block">
-              <img src="/Algarve-WebCraft/assets/logos/business-logo-light.webp" class="footer-business-logo" width="310" height="110" alt="" decoding="async" loading="lazy" aria-hidden="true">
+              <img src="assets/logos/business-logo-light.webp" class="footer-business-logo" width="310" height="110" alt="" decoding="async" loading="lazy" aria-hidden="true">
               <p>Our philosophy is that every small business deserves a website they can be proud of. No matter your size, your online presence should be built to grow with you. We are here to help make it happen!</p>
               <a class="cmp-main-btn-footer" href="html/contact.html">Get Started Now</a>
             </div>
