--- a/index.html
+++ b/index.html
@@ -242,9 +242,9 @@
 
             <div class="owner-image-box">
               <picture>
-                <source srcset="/Algarve-Webcraft/assets/images/man-l.webp" media="(min-width: 768px)" type="image/webp">
-                <source srcset="/Algarve-Webcraft/assets/images/man-s.webp" media="(max-width: 767px)" type="image/webp">
-                <img src="/Algarve-Webcraft/assets/images/man.jpg" alt="Tayler Batista, the owner of Algarve Webcraft" width="506px" height="674px" loading="lazy" decoding="async">
+                <source srcset="assets/images/man-l.webp" media="(min-width: 768px)" type="image/webp">
+                <source srcset="assets/images/man-s.webp" media="(max-width: 767px)" type="image/webp">
+                <img src="assets/images/man.jpg" alt="Tayler Batista, the owner of Algarve Webcraft" width="506px" height="674px" loading="lazy" decoding="async">
               </picture>
 
               <div class="owner-image-box__text-box">
