--- a/index.html
+++ b/index.html
@@ -428,9 +428,9 @@
 
           <div class="performance-text-block__image-block">
             <picture>
-              <source srcset="/Algarve-Webcraft/assets/images/page-score-l.webp" media="(min-width: 768px)" type="image/webp">
-              <source srcset="/Algarve-Webcraft/assets/images/page-score-s.webp" media="(max-width: 767px)" type="image/webp">
-              <img src="/Algarve-Webcraft/assets/images/page-score.jpg" alt="A screenshot of a performance chart for a website showing 100% score across all website metrics (Performance, Accessiblity, Best Practices and SEO)." width="506px" height="674px" loading="lazy" decoding="async">
+              <source srcset="assets/images/page-score-l.webp" media="(min-width: 768px)" type="image/webp">
+              <source srcset="assets/images/page-score-s.webp" media="(max-width: 767px)" type="image/webp">
+              <img src="assets/images/page-score.jpg" alt="A screenshot of a performance chart for a website showing 100% score across all website metrics (Performance, Accessiblity, Best Practices and SEO)." width="506px" height="674px" loading="lazy" decoding="async">
             </picture>
           </div>
 
@@ -450,23 +450,23 @@
 
           <div class="banner">
             <div class="slider" style="--quantity: 3">
-              <div class="item" style="--position: 1"><a href="https://Algarve-WebCraft.github.io/The-Garden-Bar-and-Grill/index.html">
+              <div class="item" style="--position: 1"><a href="https://Algarve-WebCraft.github.io/The-Garden-Bar-and-Grill/">
                 <picture>
-                  <source srcset="/Algarve-WebCraft/assets/images/the-garden-l.webp" media="(min-width: 768px)" type="image/webp">
-                  <source srcset="/Algarve-WebCraft/assets/images/the-garden-s.webp" media="(max-width: 767px)" type="image/webp">
-                  <img src="/Algarve-WebCraft/assets/images/the-garden.jpg" class="portfolio-images" width="500px" height="300px" alt="A screenshot of a website called 'Mushroom Foraging', created by Algarve Webcraft" decoding="async" loading="lazy"></a></div>
+                  <source srcset="assets/images/the-garden-l.webp" media="(min-width: 768px)" type="image/webp">
+                  <source srcset="assets/images/the-garden-s.webp" media="(max-width: 767px)" type="image/webp">
+                  <img src="assets/images/the-garden.jpg" class="portfolio-images" width="500px" height="300px" alt="A screenshot of a website called 'Mushroom Foraging', created by Algarve Webcraft" decoding="async" loading="lazy"></a></div>
               </picture>
               <div class="item" style="--position: 2"><a href="https://Algarve-WebCraft.github.io/Freelance-Portfolio/">
                 <picture>
-                  <source srcset="/Algarve-WebCraft/assets/images/designer-portfolio-l.webp" media="(min-width: 768px)" type="image/webp">
-                  <source srcset="/Algarve-WebCraft/assets/images/designer-portfolio-s.webp" media="(max-width: 767px)" type="image/webp">
-                  <img src="/Algarve-WebCraft/assets/images/designer-portfolio.jpg" class="portfolio-images" width="500px" height="300px" alt="A screenshot of a website called 'Designer Profile', created by Algarve Webcraft" decoding="async" loading="lazy"></a></div>
+                  <source srcset="assets/images/designer-portfolio-l.webp" media="(min-width: 768px)" type="image/webp">
+                  <source srcset="assets/images/designer-portfolio-s.webp" media="(max-width: 767px)" type="image/webp">
+                  <img src="assets/images/designer-portfolio.jpg" class="portfolio-images" width="500px" height="300px" alt="A screenshot of a website called 'Designer Profile', created by Algarve Webcraft" decoding="async" loading="lazy"></a></div>
               </picture>
               <div class="item" style="--position: 3"><a href="https://Algarve-WebCraft.github.io/Mushroom-Guide/">
                 <picture>
-                  <source srcset="/Algarve-WebCraft/assets/images/mushroom-foraging-l.webp" media="(min-width: 768px)" type="image/webp">
-                  <source srcset="/Algarve-WebCraft/assets/images/mushroom-foraging-s.webp" media="(max-width: 767px)" type="image/webp">
-                  <img src="/Algarve-WebCraft/assets/images/mushroom-foraging.jpg" class="portfolio-images" width="500px" height="300px" alt="A screenshot of a website called 'Mushroom Foraging', created by Algarve Webcraft" decoding="async" loading="lazy"></a></div>
+                  <source srcset="assets/images/mushroom-foraging-l.webp" media="(min-width: 768px)" type="image/webp">
+                  <source srcset="assets/images/mushroom-foraging-s.webp" media="(max-width: 767px)" type="image/webp">
+                  <img src="assets/images/mushroom-foraging.jpg" class="portfolio-images" width="500px" height="300px" alt="A screenshot of a website called 'Mushroom Foraging', created by Algarve Webcraft" decoding="async" loading="lazy"></a></div>
               </picture>
             </div>
           </div>
@@ -687,7 +687,7 @@
 
           <div class="footer-flex-container">
             <div class="footer__image-text-block">
-              <img src="/Algarve-WebCraft/assets/logos/business-logo-light.webp" class="footer-business-logo" width="310" height="110" alt="" decoding="async" loading="lazy" aria-hidden="true">
+              <img src="assets/logos/business-logo-light.webp" class="footer-business-logo" width="310" height="110" alt="" decoding="async" loading="lazy" aria-hidden="true">
               <p>Our philosophy is that every small business deserves a website they can be proud of. No matter your size, your online presence should be built to grow with you. We are here to help make it happen!</p>
               <a class="cmp-main-btn-footer" href="./html/contact.html">Get Started Now</a>
             </div>
