--- a/html/about.html
+++ b/html/about.html
@@ -181,7 +181,7 @@
 
           <div class="banner">
             <div class="slider" style="--quantity: 3">
-              <div class="item" style="--position: 1"><a href="https://Algarve-WebCraft.github.io/The-Garden-Bar-and-Grill/index.html">
+              <div class="item" style="--position: 1"><a href="https://Algarve-WebCraft.github.io/The-Garden-Bar-and-Grill/">
                 <picture>
                   <source srcset="assets/images/the-garden-l.webp" media="(min-width: 768px)" type="image/webp">
                   <source srcset="assets/images/the-garden-s.webp" media="(max-width: 767px)" type="image/webp">
